--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/allPages"
     android:id="@+id/editServiceLayout"
+    style="@style/allPages"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.editing.EditProfileActivity">
 
     <include layout="@layout/part_top_panel" />
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/saveChangesEditProfileBtn"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topPanel">
@@ -129,6 +129,12 @@
                 android:id="@+id/resendCodeEditProfileBtn"
                 style="@style/outlineButton"
                 android:text="@string/resendCode" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/saveChangesEditProfileBtn"
+                style="@style/mainButton"
+                android:text="@string/saveData" />
+
         </LinearLayout>
     </ScrollView>
 
@@ -140,14 +146,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/saveChangesEditProfileBtn"
-        style="@style/mainButton"
-        android:text="@string/saveData"
-        app:layout_constraintBottom_toTopOf="@id/bottomPanel"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 
     <include layout="@layout/part_bottom_panel" />
 
