--- a/app/src/main/res/layout/element_user_comment.xml
+++ b/app/src/main/res/layout/element_user_comment.xml
@@ -1,66 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/commentElementLayout"
-    style="@style/block"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/block_text"
-    android:orientation="vertical"
-    android:padding="4dp">
+    style="@style/block">
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/element_comment_ll_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/avatarUserCommentElementImage"
-            android:layout_width="@dimen/photo_avatar_width"
-            android:layout_height="@dimen/photo_avatar_height"
-            android:layout_marginEnd="8dp"
-            tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="match_parent"
+        android:checkable="true"
+        android:clickable="true"
+        android:focusable="true">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="4dp">
+            android:orientation="horizontal"
+            android:padding="8dp">
 
-            <TextView
-                android:id="@+id/nameUserCommentElementText"
-                style="@style/mainTextMainScreen"
+            <ImageView
+                android:id="@+id/element_comment_iv_avatar"
+                android:layout_width="@dimen/photo_avatar_width"
+                android:layout_height="@dimen/photo_avatar_height"
+                android:layout_marginEnd="8dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:paddingTop="4dp">
+
+                <TextView
+                    android:id="@+id/element_comment_tv_name"
+                    style="@style/mainTextMainScreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/name"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/element_comment_tv_review"
+                    style="@style/defaultTextMainScreen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Комментарий" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Имя"
-                android:textSize="18sp" />
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/reviewUserCommentElementText"
-                style="@style/defaultTextMainScreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Комментарий" />
-
+                <RatingBar
+                    android:id="@+id/element_comment_rb_rating"
+                    style="@android:style/Widget.Holo.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:theme="@style/ratingBarColors" />
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <RatingBar
-                android:id="@+id/ratingUserCommentElementBar"
-                style="@android:style/Widget.Holo.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:theme="@style/ratingBarColors" />
-        </LinearLayout>
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
