--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,40 +1,24 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
-
-    <dimen name="categories_width">80dp</dimen>
-    <dimen name="categories_height">36dp</dimen>
-
     <dimen name="photo_width">125dp</dimen>
     <dimen name="photo_height">125dp</dimen>
 
     <dimen name="photo_avatar_width">48dp</dimen>
     <dimen name="photo_avatar_height">48dp</dimen>
 
-    <dimen name="photo_small_avatar_width">35dp</dimen>
-    <dimen name="photo_small_avatar_height">35dp</dimen>
-
     <dimen name="bottom_panel_height">56dp</dimen>
 
-    <dimen name="main_button_height">36dp</dimen>
-
-    <dimen name="tags_width">700dp</dimen>
-
-    <dimen name="schedule_button_width">36dp</dimen>
+    <!-- Schedule activity -->
     <dimen name="schedule_button_height">36dp</dimen>
     <dimen name="schedule_button_margin">2dp</dimen>
-    <dimen name="button_stroke_width">3dp</dimen>
-    <dimen name="button_corner_radius">5dp</dimen>
+    <dimen name="schedule_button_stroke_width">3dp</dimen>
+    <dimen name="schedule_button_corner_radius">5dp</dimen>
 
-    <dimen name="sessions_button_margin">8dp</dimen>
+    <!-- Sessions activity -->
     <dimen name="sessions_button_width">48dp</dimen>
     <dimen name="sessions_button_height">48dp</dimen>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="appbar_padding">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="sessions_button_margin">8dp</dimen>
 
-    <!-- Default margin -->
+    <!-- Block margin -->
     <dimen name="default_margin">8dp</dimen>
     <dimen name="default_small_margin">4dp</dimen>
 
