--- a/app/src/main/res/layout/activity_current_comment.xml
+++ b/app/src/main/res/layout/activity_current_comment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/block"
+    style="@style/wideHorizontalBlockWithSmallMargin"
     android:layout_width="wrap_content"
     android:layout_height="100dp"
     android:background="@color/white"
