--- a/app/src/main/res/layout/element_profile_order.xml
+++ b/app/src/main/res/layout/element_profile_order.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/block"
-    android:layout_margin="@dimen/default_small_margin"
-    android:background="@drawable/profile_block">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/wideHorizontalBlockWithSmallMargin">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/profileOrderElementLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:checkable="true"
         android:clickable="true"
-        android:focusable="true">
+        android:focusable="true"
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             style="@style/wideHorizontalBlock"
@@ -18,7 +18,7 @@
 
             <TextView
                 android:id="@+id/serviceNameProfileOrderElementText"
-                style="@style/foundProfileElement"
+                style="@style/blueBoldText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
