--- a/app/src/main/res/layout/element_service_comment.xml
+++ b/app/src/main/res/layout/element_service_comment.xml
@@ -1,69 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/block">
+    android:id="@+id/element_service_comment_ll"
+    style="@style/wideHorizontalBlockWithSmallMargin"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="4dp">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/element_servicecomment_ll_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:checkable="true"
-        android:clickable="true"
-        android:focusable="true">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/element_service_comment_iv_avatar"
+            android:layout_width="@dimen/photo_avatar_width"
+            android:layout_height="@dimen/photo_avatar_height"
+            android:layout_marginEnd="8dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingTop="4dp">
 
-            <ImageView
-                android:id="@+id/element_servicecomment_iv_avatar"
-                android:layout_width="@dimen/photo_avatar_width"
-                android:layout_height="@dimen/photo_avatar_height"
-                android:layout_marginEnd="8dp"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingTop="4dp">
-
-                <TextView
-                    android:id="@+id/element_servicecomment_tv_name"
-                    style="@style/mainTextMainScreen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Имя"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/element_servicecomment_tv_review"
-                    style="@style/defaultTextMainScreen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Комментарий" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/element_service_comment_tv_name"
+                style="@style/mainTextMainScreen"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:text="Имя"
+                android:textSize="18sp" />
 
-                <RatingBar
-                    android:id="@+id/element_servicecomment_rb_rating"
-                    style="@android:style/Widget.Holo.RatingBar.Small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:isIndicator="true"
-                    android:numStars="5"
-                    android:theme="@style/ratingBarColors" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/element_service_comment_tv_review"
+                style="@style/defaultTextMainScreen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Комментарий" />
+
         </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <RatingBar
+                android:id="@+id/element_service_comment_rb_rating"
+                style="@android:style/Widget.Holo.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:theme="@style/ratingBarColors" />
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
