--- a/app/src/main/res/layout/element_subscription.xml
+++ b/app/src/main/res/layout/element_subscription.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/block"
+    style="@style/wideHorizontalBlockWithSmallMargin"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.adapters.elements.SubscriptionElement">
 
     <com.google.android.material.card.MaterialCardView
