--- a/app/src/main/res/layout/fragment_premium.xml
+++ b/app/src/main/res/layout/fragment_premium.xml
@@ -11,10 +11,9 @@
 
     <LinearLayout
         android:id="@+id/premiumAddServiceHeaderLayout"
-        style="@style/block"
+        style="@style/wideHorizontalBlockWithSmallMargin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/block_text"
         android:minHeight="50dp"
         android:orientation="horizontal">
 
