--- a/app/src/main/res/layout/part_bottom_panel.xml
+++ b/app/src/main/res/layout/part_bottom_panel.xml
@@ -5,6 +5,6 @@
     style="@style/bottomNavigation"
     android:layout_gravity="bottom"
     android:scrollbars="none"
-    app:itemTextColor="@color/navigation"
+    app:itemTextColor="@color/selector_navigation"
     app:layout_constraintBottom_toBottomOf="parent"
     app:menu="@menu/bottom_navigation_menu" />
