--- a/app/src/main/res/layout/element_dialog.xml
+++ b/app/src/main/res/layout/element_dialog.xml
@@ -5,7 +5,7 @@
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.adapters.elements.chatElements.DialogElement">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/dialogElementLayout"
+        android:id="@+id/element_dialog_mc_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:checkable="true"
@@ -20,13 +20,12 @@
             android:padding="8dp">
 
             <LinearLayout
-                android:id="@+id/dialogElementLayoutSecond"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@color/white">
 
                 <ImageView
-                    android:id="@+id/avatarDialogElementImage"
+                    android:id="@+id/element_dialog_iv_avatar"
                     android:layout_width="@dimen/photo_avatar_width"
                     android:layout_height="@dimen/photo_avatar_height"
                     android:layout_marginEnd="10dp"
@@ -35,7 +34,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/dialogElementLayoutLast"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -49,26 +47,25 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/nameDialogElementText"
+                        android:id="@+id/element_dialog_tv_name"
                         style="@style/mainTextMainScreen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Name" />
+                        android:text="@string/name" />
 
                     <TextView
-                        android:id="@+id/lastMessageDialogElementText"
+                        android:id="@+id/element_dialog_tv_last_message"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_medium"
-                        android:text="Name"
+                        android:text="@string/name"
                         android:textColor="@color/grey" />
 
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/messageTimeDialogElementText"
+                    android:id="@+id/element_dialog_tv_time"
                     style="@style/timeText"
-
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="5"
@@ -76,7 +73,7 @@
                     android:text="time" />
 
                 <TextView
-                    android:id="@+id/isCheckedDialogElementText"
+                    android:id="@+id/element_dialog_tv_is_checked"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="5"
