--- a/app/src/main/res/layout/activity_current_comment.xml
+++ b/app/src/main/res/layout/activity_current_comment.xml
@@ -1,57 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/wideHorizontalBlockWithSmallMargin"
-    android:layout_width="wrap_content"
-    android:layout_height="100dp"
-    android:background="@color/white"
-    android:orientation="horizontal"
+    style="@style/allPages"
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.mvp.activities.comments.CurrentCommentActivity">
 
-    <ImageView
-        android:id="@+id/avatarCurrentCommentActivityImage"
-        android:layout_width="@dimen/photo_avatar_width"
-        android:layout_height="@dimen/photo_avatar_height"
-        tools:srcCompat="@tools:sample/avatars" />
+    <include layout="@layout/part_top_panel" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/default_margin"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/userNameCurrentCommentActivityText"
-            style="@style/mainTextMainScreen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Имя пользователя"
-            android:textSize="18sp" />
+        android:layout_height="0dp"
+        android:layout_margin="2dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topPanel">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/reviewCurrentCommentActivityText"
-                style="@style/defaultTextMainScreen"
+            <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="text" />
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="16dp">
+
+                    <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                        android:id="@+id/activity_current_comment_rb_rating"
+                        style="@android:style/Widget.Holo.RatingBar.Indicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:theme="@style/ratingBarColors" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/comment"
+                        android:textAppearance="?attr/textAppearanceHeadline6"  />
+
+                    <TextView
+                        android:id="@+id/activity_current_comment_tv_review"
+                        style="@style/serviceBodyText"
+                        android:text="@string/comment" />
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
-    <RatingBar
-        android:id="@+id/ratingCurrentCommentActivityBar"
-        style="@android:style/Widget.Holo.RatingBar.Small"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:isIndicator="true"
-        android:theme="@style/ratingBarColors" />
+    <include layout="@layout/part_bottom_panel" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
