--- a/app/src/main/res/layout/element_message.xml
+++ b/app/src/main/res/layout/element_message.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainLayoutMessageElementLayout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
@@ -13,24 +12,23 @@
     tools:context="com.bunbeauty.ideal.myapplication.clean_architecture.adapters.elements.chatElements.messageElements.MessageElement">
 
     <LinearLayout
-        android:id="@+id/messageMessageElementLayout"
+        android:id="@+id/element_message_ll_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="wrap_content"
-            app:cardCornerRadius="@dimen/default_margin"
+            android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/backgroundLightBlue"
-            android:layout_height="wrap_content">
+            app:cardCornerRadius="@dimen/default_margin">
 
             <LinearLayout
-                android:id="@+id/ratingBlockServiceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/messageTextMessageElementText"
+                    android:id="@+id/element_message_tv_message"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:maxWidth="230dp"
@@ -41,7 +39,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/messageTimeMessageElementText"
+                    android:id="@+id/element_message_tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="bottom"
@@ -55,9 +53,8 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/rateMessageElementButton"
+        android:id="@+id/element_message_btn_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="Оценить" />
+        android:layout_gravity="end" />
 </LinearLayout>
