--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/footer_edit_service_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/top_panel" />
 
     <TextView
         android:id="@+id/empty_messages_text"
