--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,7 +9,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -34,11 +34,11 @@
                         style="@style/wideVerticalBlock"
                         android:background="@color/mainBlue"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/topPanel">
+                        app:layout_constraintTop_toBottomOf="@id/top_panel">
 
                         <LinearLayout
                             style="@style/wideHorizontalBlock"
-                            app:layout_constraintTop_toBottomOf="@id/topPanel">
+                            app:layout_constraintTop_toBottomOf="@id/top_panel">
 
                             <RelativeLayout
                                 style="@style/highHorizontalBlock"
