--- a/app/src/main/res/layout/activity_service_comments.xml
+++ b/app/src/main/res/layout/activity_service_comments.xml
@@ -11,10 +11,10 @@
         android:id="@+id/activity_servicecomments_tv_empty"
         style="@style/infoText"
         android:text="Нет комментариев"
-        app:layout_constraintBottom_toTopOf="@+id/topPanel"
+        app:layout_constraintBottom_toTopOf="@+id/top_panel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/bottom_panel" />
 
     <ProgressBar
         android:id="@+id/activity_servicecomments_pb_loading"
@@ -22,10 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
-        app:layout_constraintBottom_toTopOf="@+id/topPanel"
+        app:layout_constraintBottom_toTopOf="@+id/top_panel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/bottom_panel" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activity_servicecomments_rv_results"
@@ -33,10 +33,10 @@
         android:layout_height="0dp"
         android:layout_margin="1dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanel"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topPanel" />
+        app:layout_constraintTop_toBottomOf="@+id/top_panel" />
 
     <include layout="@layout/part_bottom_panel" />
 
