--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,5 +21,6 @@
     <!-- Block margin -->
     <dimen name="default_margin">8dp</dimen>
     <dimen name="default_small_margin">4dp</dimen>
+    <dimen name="default_bottom_button_margin">50dp</dimen>
 
 </resources>
