notification icon was updated; design was updated; service was updated (schedule button)

--- a/app/src/main/res/layout/activity_creation_service.xml
+++ b/app/src/main/res/layout/activity_creation_service.xml
@@ -147,16 +147,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/activity_creation_service_btn_add_service"
-                style="@style/mainButton"
+                style="@style/smallButton"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/addServices" />
         </LinearLayout>
-
     </ScrollView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/activity_creation_service_btn_continue"
-        style="@style/mainButton"
+        style="@style/smallButton"
         android:text="Продолжить"
         app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
         app:layout_constraintLeft_toLeftOf="parent"
