--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -122,7 +122,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/activity_edit_profile_btn_verify"
-                style="@style/smallButton"
+                style="@style/loginButton"
                 android:text="@string/verifyCode" />
 
             <com.google.android.material.button.MaterialButton
@@ -132,7 +132,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/activity_edit_profile_btn_save"
-                style="@style/mainButton"
+                style="@style/loginButton"
                 android:text="@string/saveData" />
 
         </LinearLayout>
