--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -161,7 +161,7 @@
         <item name="android:layout_width">175dp</item>
         <item name="android:layout_marginStart">2dp</item>
         <item name="android:layout_marginEnd">2dp</item>
-        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="android:backgroundTint">@color/selector_dark_blue</item>
         <item name="cornerRadius">18dp</item>
     </style>
 
@@ -189,6 +189,8 @@
     <style name="mainButton" parent="baseButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="paddingStart">48dp</item>
+        <item name="paddingEnd">48dp</item>
         <item name="cornerRadius">18dp</item>
         <item name="android:backgroundTint">@color/selector_dark_blue</item>
         <item name="android:textColor">@color/white</item>
