--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -8,9 +8,11 @@
     <LinearLayout
         style="@style/loginPackageMainLinearLayout"
         app:layout_constraintBottom_toTopOf="@+id/activity_authorization_ll_bottom"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:id="@+id/activity_authorization_iv_logo"
@@ -26,9 +28,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_authorization_til_code"
                 style="@style/materialLoginSpinnerLayout"
+                android:layout_width="wrap_content"
                 android:layout_marginEnd="3dp"
-                app:startIconDrawable="@drawable/icon_phone_number"
-                android:layout_weight="1.4">
+                app:startIconDrawable="@drawable/icon_phone_number">
 
                 <AutoCompleteTextView
                     android:id="@+id/activity_authorization_sp_code"
@@ -40,7 +42,8 @@
                 style="@style/materialLoginInputLayout"
                 android:layout_marginStart="3dp"
                 android:layout_weight="1"
-                android:hint="@string/phone">
+                android:hint="@string/phone"
+                android:layout_width="0dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/activity_authorization_et_phone"
@@ -71,7 +74,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/activity_authorization_btn_login"
             style="@style/loginButton"
-            android:text="Войти"/>
+            android:text="Войти" />
 
     </LinearLayout>
 
