--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -56,6 +56,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/mainBlue"
             android:hint="Сообщения"
+            android:layout_margin="@dimen/default_small_margin"
             android:inputType="textMultiLine|textCapSentences"
             android:textColor="@color/white"
             android:textColorHint="@color/white50"
