refactoring PhotoSliderActivity.kt added ProgressPhoto.kt
Took 1 hour 22 minutes

--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ordersRecyclerView"
+        android:id="@+id/fragment_orders_rv_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none" />
